[package]
name = "labt"
version = "1.0.1"
edition = "2024"

[dependencies]
notify-rust = { version = "4", default-features = false, features = ["d"] }
clap = { version = "4", features = ["derive"] }
rodio = "0.20.1"
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
notify-rust = { version = "4", default-features = true }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true
panic = 'abort'
