[package]
name = "labt"
version = "1.0.2"
edition = "2024"
authors = ["METDXT <metdxt@obj.su>"]
license = "MIT"

[dependencies]
notify-rust = { version = "4", default-features = false, features = ["d"] }
clap = { version = "4", features = ["derive"] }
rodio = "0.20.1"
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
notify-rust = { version = "4", default-features = true }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true
panic = 'abort'

[package.metadata.deb]
maintainer = "METDXT <metdxt@obj.su>"
copyright = "2025, METDXT <metdxt@obj.su>"
