[package]
name = "labtimer"
version = "1.1.0"
edition = "2024"
authors = ["METDXT <metdxt@obj.su>"]
license = "MIT"
description = "A worldline-accurate CLI timer"
homepage = "https://github.com/metdxt/labt"
repository = "https://github.com/metdxt/labt"
readme = "README.md"
keywords = ["cli", "timer"]
categories = ["command-line-utilities"]
exclude = ["examples/*", ".github/*", "assets/logo.svg"]

[[bin]]
name = "labt"
path = "src/main.rs"

[dependencies]
notify-rust = { version = "4", default-features = false, features = ["d"] }
clap = { version = "4", features = ["derive"] }
rodio = "0.20.1"
ctrlc = "3.4"
indicatif = "0.17"

[target.'cfg(windows)'.dependencies]
notify-rust = { version = "4", default-features = true }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
strip = true
panic = 'abort'

[package.metadata.deb]
maintainer = "METDXT <metdxt@obj.su>"
copyright = "2025, METDXT <metdxt@obj.su>"
